# 8T8T_ETILE

./: .gitignore
release/docs/: WS-FAD-00110 Sail River Gen III JESD Data Mapping.xlsx  WS-FAD-00110 Sail River Gen III Latency.xlsx  WS-FAD-00110 Sail River Gen III Resource Estimate.xlsx  WS-FAD-00110 Sail River Gen III.vsdx  WS-FID-00042 Sail River Gen III.xlsx  WS-VTP-00072 Sail River Gen III.xlsx
release/fpga/matlab_scripts/: DSPBA_tc1_100_100.m  DSPBA_tc2_60_60.m  DSPBA_tc3_100_60.m  DSPBA_tc4_100_100_DCSC_PhCmp_en.m  DSPBA_tc5_60_60_DCSC_PhCmp_en.m  DSPBA_tc6_100_60_DCSC_PhCmp_en.m  DSPBA_tc7_100_100_gain_2.m  pcap2mex.m  sim_top.m  tc_c_u_coupling_case_1_compress_60_cc2_dis_settings.m  tc_c_u_coupling_case_1_compress_60_ifft_fft_lpbk_settings.m  tc_c_u_coupling_case_1_compress_60_phasecomp_settings.m  tc_c_u_coupling_case_1_compress_60_settings.m  tc_c_u_coupling_case_1_compress_cc2_dis_settings.m  tc_c_u_coupling_case_1_compress_ifft_fft_lpbk_settings.m  tc_c_u_coupling_case_1_compress_mixed_60_100_settings.m  tc_c_u_coupling_case_1_compress_mixed_settings.m  tc_c_u_coupling_case_1_compress_phasecomp_settings.m  tc_compression_symbol_blanking_axc_blanking_settings.m  tc_compression_symbol_blanking_settings.m  tc_delay_compensation_settings.m  tc_eaxc_blanking_case_1_compression_settings.m  tc_multi_sec_sym_axc_prb_blanking_settings.m  tc_prach_long_format_c_plane_settings.m  tc_prb_blanking_case_1_compression_settings.m  tc_prb_blanking_case_2_compression_settings.m  testcase_load.txt
release/fpga/matlab_scripts/generation_scripts/: O_RU_Phase_compensation.m  O_RU_lte_ofdm_demodulation.m  O_RU_lte_ofdm_modulation.m  ca_interp_top.m  ddc_top.m  ddc_top_sim.m  dec_delay_comp_top.m  duc_top.m  duc_top_sim.m  fft_top.m  fft_top_sim.m  (+6 more)
release/fpga/quartus/: ag_esom_top.qpf  ag_esom_top.qsf  ghrd_agilex_top.sv
release/sim/: cplane_prach_fdv.ver  cplane_pusch_fdv.mif  cplane_pusch_fdv.ver  dl_blanking.mif  dl_blanking.ver  map_table.ver  prach_data_in_long.ver
release/sim/verif/o_ru/o_ru_c_model/phase_comp_fft_cmodel/: CMakeFiles.txt  CMakeLists.txt  connector.h  phase_comp_phase_comp.cpp  phase_comp_phase_comp.h  phase_comp_phase_comp_ComplexMixer.cpp  phase_comp_phase_comp_ComplexMixer.h  phase_comp_phase_comp_ComplexMixer_ComplexMixer.cpp  phase_comp_phase_comp_ComplexMixer_ComplexMixer.h  phase_comp_phase_comp_ComplexMixer_Scalei.cpp  phase_comp_phase_comp_ComplexMixer_Scalei.h  phase_comp_phase_comp_ComplexMixer_Scaleq.cpp  phase_comp_phase_comp_ComplexMixer_Scaleq.h  phase_comp_phase_comp_PhasorGenerate.cpp  phase_comp_phase_comp_PhasorGenerate.h
release/sim/verif/o_ru/o_ru_c_model/phase_comp_fft_cmodel/atb/: atb_app.cpp  phase_comp_phase_comp_ComplexMixer_ComplexMixer_atb.h  phase_comp_phase_comp_ComplexMixer_Scalei_atb.h  phase_comp_phase_comp_ComplexMixer_Scaleq_atb.h  phase_comp_phase_comp_ComplexMixer_atb.h  phase_comp_phase_comp_PhasorGenerate_atb.h
release/sim/verif/o_ru/o_ru_c_model/phase_comp_fft_cmodel/dspba/: phase_comp.mdl
release/sim/verif/o_ru/o_ru_c_model/phase_comp_fft_cmodel/stm/: phase_comp_phase_comp_ComplexMixer_ComplexMixer_cIn.stm  phase_comp_phase_comp_ComplexMixer_ComplexMixer_iIn.stm  phase_comp_phase_comp_ComplexMixer_ComplexMixer_iOut.stm  phase_comp_phase_comp_ComplexMixer_ComplexMixer_qIn.stm  phase_comp_phase_comp_ComplexMixer_ComplexMixer_qOut.stm  phase_comp_phase_comp_ComplexMixer_ComplexMixer_sIn.stm  phase_comp_phase_comp_ComplexMixer_Scalei_qOut.stm  phase_comp_phase_comp_ComplexMixer_Scalei_xIn.stm  phase_comp_phase_comp_ComplexMixer_Scaleq_qOut.stm  phase_comp_phase_comp_ComplexMixer_Scaleq_xIn.stm  phase_comp_phase_comp_PhasorGenerate_ChannelIn_cunroll_x.stm  phase_comp_phase_comp_PhasorGenerate_ChannelOut_cunroll_x.stm
release/sim/verif/o_ru/o_ru_c_model/phase_comp_fft_cmodel/support/: csl.h  csl_io.cpp
(+10706 files in other folders)
